// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SnackBar > displays a SnackBar 1`] = `
<div>
  <div
    class="mock-snackbar-content"
  >
    <div
      class="mock-card"
    >
      <div
        class="mock-card-actions variant"
      >
        <div
          class="mock-grid"
        >
          <div
            class="mock-typography"
          >
            message
          </div>
        </div>
        <div
          class="mock-grid"
        >
          <div
            class="mock-icon-button"
            data-testid="icon-button"
          >
            <div
              class="mock-close-icon"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SnackBar > displays a SnackBar with content 1`] = `
<div>
  <div
    class="mock-snackbar-content"
  >
    <div
      class="mock-card"
    >
      <div
        class="mock-card-actions variant"
      >
        <div
          class="mock-grid"
        >
          <div
            class="mock-typography"
          >
            message
          </div>
        </div>
        <div
          class="mock-grid"
        >
          <div
            class="mock-icon-button"
            data-testid="icon-button"
          >
            <div
              class="mock-expand-more-icon"
            />
          </div>
          <div
            class="mock-icon-button"
            data-testid="icon-button"
          >
            <div
              class="mock-close-icon"
            />
          </div>
        </div>
      </div>
      <div
        class="mock-collapse"
      >
        <div
          class="mock-paper"
        >
          <div
            data-testid="content"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SnackBar displays a SnackBar 1`] = `
<div>
  <div
    class="mock-snackbar-content"
  >
    <div
      class="mock-card"
    >
      <div
        class="mock-card-actions variant"
      >
        <div
          class="mock-grid"
        >
          <div
            class="mock-typography"
          >
            message
          </div>
        </div>
        <div
          class="mock-grid"
        >
          <div
            class="mock-icon-button"
            data-testid="icon-button"
          >
            <div
              class="mock-close-icon"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SnackBar displays a SnackBar with content 1`] = `
<div>
  <div
    class="mock-snackbar-content"
  >
    <div
      class="mock-card"
    >
      <div
        class="mock-card-actions variant"
      >
        <div
          class="mock-grid"
        >
          <div
            class="mock-typography"
          >
            message
          </div>
        </div>
        <div
          class="mock-grid"
        >
          <div
            class="mock-icon-button"
            data-testid="icon-button"
          >
            <div
              class="mock-expand-more-icon"
            />
          </div>
          <div
            class="mock-icon-button"
            data-testid="icon-button"
          >
            <div
              class="mock-close-icon"
            />
          </div>
        </div>
      </div>
      <div
        class="mock-collapse"
      >
        <div
          class="mock-paper"
        >
          <div
            data-testid="content"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
